Overwritten bootstrap source

--- a/static/scss/custom.scss
+++ b/static/scss/custom.scss
@@ -1,16 +1,8 @@
+// Overide bootstrap variables
 @import "custom_variables";
 
-// bootstrap source code
-@import "../vendor/bootstrap/scss/bootstrap";
-// Required
-// @import "../node_modules/bootstrap/scss/functions";
-// @import "../node_modules/bootstrap/scss/variables";
-// @import "../node_modules/bootstrap/scss/mixins";
+// Import bootsrap4 source
+@import "import_bs4";
 
-// Optional
-// @import "../node_modules/bootstrap/scss/reboot";
-// @import "../node_modules/bootstrap/scss/type";
-// @import "../node_modules/bootstrap/scss/images";
-// @import "../node_modules/bootstrap/scss/code";
-// @import "../node_modules/bootstrap/scss/grid";
+// Add custom styles
 @import "custom_styles";
