--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,19 @@
 {% extends 'base.html' %}
+{% block page_header %}
+{% endblock %}
 
-{% block main %}
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a href="{{ url_for('index') }}" class="navbar-brand">Mini Starter</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-site-nav">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse show navbar-collapse" id="main-site-nav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a href="#" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">About</a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">Contact</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+{% block page_main %}
+<header class="hero-image jumbotron jumbotron-fluide mt-5 text-center text-light">
+    <h1 class="display-2">Micro Starter</h1>
+    <p class="lead">
+        Lorem ipsum, dolor sit amet consectetur adipisicing.
+    </p>
+    <hr class="my-4" />
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam cum repellendus officiis, deleniti itaque
+        voluptatem tempore nulla amet?
+    </p>
+    <a class="btn btn-outline-secondary btn-lg" href="#" role="button">Learn more</a>
+    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+</header>
 {% endblock %}
