--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 
 {% block page_main %}
-<h1 class="display-1 mt-5 pt-5">helloooo</h1>
+<div class="display-4 font-weight-bold text-primary pt-6" id="time-area"></div>
 {% endblock %}
