--- a/templates/index.html
+++ b/templates/index.html
@@ -3,17 +3,27 @@
 {% endblock %}
 
 {% block page_main %}
-<header class="hero-image jumbotron jumbotron-fluide mt-5 text-center text-light">
-    <h1 class="display-2">Micro Starter</h1>
+<header class="hero-image jumbotron jumbotron-fluid  text-center text-light">
+    <h1 class="display-1 pt-6">Micro Starter</h1>
+    <!-- <hr class="bg-light" /> -->
     <p class="lead">
         Lorem ipsum, dolor sit amet consectetur adipisicing.
     </p>
-    <hr class="my-4" />
-    <p>
+    <!-- <hr class="" /> -->
+    <p class="">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam cum repellendus officiis, deleniti itaque
         voluptatem tempore nulla amet?
     </p>
-    <a class="btn btn-outline-secondary btn-lg" href="#" role="button">Learn more</a>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    <hr class="bg-light w-50 mt-6 mb-4">
+    <!-- <a class="btn btn-outline-secondary btn-lg m-1" href="#" role="button">Learn more</a> -->
+    <a class="btn btn-outline-light btn-lg py-3 mt-0" href="#" role="button">Learn more</a>
 </header>
+<h1 class="display-1">Micro Starter</h1> <br>
+<h2 class="display-2">Micro Starter</h2> <br>
+<h3 class="display-3">Micro Starter</h3> <br>
+<h4 class="display-4">Micro Starter</h4> <br>
+<h5 class="display-5">Micro Starter</h5> <br>
+<h6 class="display-6">Micro Starter</h6> <br>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati itaque dolores alias reiciendis pariatur libero quam
+totam placeat ratione iure.
 {% endblock %}
