--- a/templates/base.html
+++ b/templates/base.html
@@ -7,13 +7,13 @@
 
 <body>
   <div class="site-wrapper">
-    <header class="site-navbar navbar navbar-expand-lg fixed-top navbar-light bg-light px-8">
-      <a href="{{ url_for('index') }}" class="navbar-brand">Micro Starter</a>
+    <header class="site-navbar navbar navbar-expand-md fixed-top navbar-light bg-light px-md-6">
+      <a href="{{ url_for('index') }}" class="navbar-brand font-weight-bold">Micro Starter</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-site-nav">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse show navbar-collapse justify-content-end" id="main-site-nav">
-        <ul class="navbar-nav">
+      <div class="collapse navbar-collapse justify-content-end py-2" id="main-site-nav">
+        <ul class="navbar-nav text-center text-uppercase">
           {% from '_macros.html' import set_active_page %}
           {{
               set_active_page("Home", "index")
@@ -31,6 +31,7 @@
     <main class="page-main">
       {% block page_main %}{% endblock %}
     </main>
+    <footer class="site-footer text-light bg-dark">&copy;</footer>
   </div>
   {% include '_scripts.html'%}
 </body>
