--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,8 @@
 
 <body>
   <div class="site-wrapper">
-    <header class="site-navbar navbar navbar-expand-md fixed-top navbar-light bg-light px-md-6">
-      <a href="{{ url_for('index') }}" class="navbar-brand font-weight-bold">Micro Starter</a>
+    <header class="d-none site-navbar navbar navbar-expand-md fixed-top navbar-light bg-light px-md-6">
+      <a href="{{ url_for('index') }}" class="navbar-brand"><span class=" font-weight-bold">Micro Starter</span></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-site-nav">
         <span class="navbar-toggler-icon"></span>
       </button>
