--- a/templates/index.html
+++ b/templates/index.html
@@ -3,27 +3,31 @@
 {% endblock %}
 
 {% block page_main %}
-<header class="hero-image jumbotron jumbotron-fluid  text-center text-light">
-    <h1 class="display-1 pt-6">Micro Starter</h1>
-    <!-- <hr class="bg-light" /> -->
-    <p class="lead">
-        Lorem ipsum, dolor sit amet consectetur adipisicing.
-    </p>
-    <!-- <hr class="" /> -->
-    <p class="">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam cum repellendus officiis, deleniti itaque
-        voluptatem tempore nulla amet?
-    </p>
-    <hr class="bg-light w-50 mt-6 mb-4">
-    <!-- <a class="btn btn-outline-secondary btn-lg m-1" href="#" role="button">Learn more</a> -->
-    <a class="btn btn-outline-light btn-lg py-3 mt-0" href="#" role="button">Learn more</a>
+
+<header class="hero jumbotron jumbotron-fluid text-center text-light">
+    <div class="container mx-auto w-65">
+
+        <h1 class="display-1 pt-5">Micro Starter</h1>
+        <!-- <hr class="bg-light" /> -->
+        <p class="lead mt-5 mb-3">
+            Lorem ipsum, dolor sit amet consectetur adipisicing.
+        </p>
+        <!-- <hr class="" /> -->
+        <p class="mb-6 mx-auto w-80">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam cum repellendus officiis, deleniti itaque
+            voluptatem tempore nulla amet?
+        </p>
+        <hr class="bg-light w-50 mt-0 mb-4">
+        <!-- <a class="btn btn-outline-secondary btn-lg m-1" href="#" role="button">Learn more</a> -->
+        <a class="btn btn-outline-light btn-lg rounded-0" href="#" role="button">Learn more</a>
+    </div>
 </header>
 <h1 class="display-1">Micro Starter</h1> <br>
 <h2 class="display-2">Micro Starter</h2> <br>
 <h3 class="display-3">Micro Starter</h3> <br>
 <h4 class="display-4">Micro Starter</h4> <br>
-<h5 class="display-5">Micro Starter</h5> <br>
-<h6 class="display-6">Micro Starter</h6> <br>
+<!-- <h5 class="display-5">Micro Starter</h5> <br>
+<h6 class="display-6">Micro Starter</h6> <br> -->
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati itaque dolores alias reiciendis pariatur libero quam
 totam placeat ratione iure.
 {% endblock %}
