--- a/static/scss/_custom_styles.scss
+++ b/static/scss/_custom_styles.scss
@@ -21,12 +21,50 @@
   grid-area: foot;
 }
 
-.hero-image {
-  background-image: url("/img/2xLgVXC.png");
-  height: 500%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.hero {
+  // background-image: url("/img/aAkf3mD.jpg");
+  // background-position: center;
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  // // height: 50%;
   position: relative;
   // object-fit: cover;
+  &::before {
+    content: "";
+    z-index: -1;
+    background-image: url("/img/aAkf3mD.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    // height: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    // filter: blur(1.9px)
+    // object-fit: cover;
+    // opacity: 0.2;
+    // background-image: linear-gradient(120deg, #eaee44, #33d0ff)
+  }
+  
+  &::after {
+    content: "";
+    z-index: -1;
+    // background-image: url("/img/aAkf3mD.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    // height: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    // filter: blur(1.9px)
+    // object-fit: cover;
+    background-image: linear-gradient(120deg, #eaee44, #33d0ff);
+    opacity: 0.3;
+  }
 }
+
