Added navbar hide/show onScroll.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% block page_main %}
 
 <header class="hero jumbotron jumbotron-fluid text-center text-light">
-    <div class="container mx-auto w-65">
+    <div class="container-fluid mx-auto w-65">
 
         <h1 class="display-1 pt-5">Micro Starter</h1>
         <!-- <hr class="bg-light" /> -->
