--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -6931,7 +6931,8 @@ a.text-dark:hover, a.text-dark:focus {
   grid-area: foot; }
 
 .hero {
-  position: relative; }
+  position: relative;
+  overflow: hidden; }
   .hero::before {
     content: "";
     z-index: -1;
@@ -6940,10 +6941,14 @@ a.text-dark:hover, a.text-dark:focus {
     background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    bottom: 0%;
+    right: 0%;
+    transform: translate(-50%, -50%);
     width: 100%;
-    height: 100%; }
+    height: 100%;
+    filter: blur(1.9px); }
   .hero::after {
     content: "";
     z-index: -1;
@@ -6951,9 +6956,16 @@ a.text-dark:hover, a.text-dark:focus {
     background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
+    top: 0%;
+    left: 50%;
+    width: 75%;
     height: 100%;
     background-image: linear-gradient(120deg, #eaee44, #33d0ff);
-    opacity: 0.3; }
+    opacity: 0.7;
+    mix-blend-mode: hue;
+    mix-blend-mode: color;
+    mix-blend-mode: hard-light;
+    transform: skew(-15deg) translateX(-50%); }
+
+.site-navbar {
+  transition: top 0.7s; }
