--- a/static/scss/_custom_styles.scss
+++ b/static/scss/_custom_styles.scss
@@ -28,6 +28,7 @@
   // background-size: cover;
   // // height: 50%;
   position: relative;
+  overflow: hidden;
   // object-fit: cover;
   &::before {
     content: "";
@@ -38,11 +39,15 @@
     background-size: cover;
     // height: 50%;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    bottom: 0%;
+    right: 0%;
+    transform: translate(-50%,-50%);
     width: 100%;
     height: 100%;
-    // filter: blur(1.9px)
+    filter: blur(1.9px);
+    // filter: grayscale(0%);
     // object-fit: cover;
     // opacity: 0.2;
     // background-image: linear-gradient(120deg, #eaee44, #33d0ff)
@@ -57,14 +62,25 @@
     background-size: cover;
     // height: 50%;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
+    top: 0%;
+    left: 50%;
+    width: 75%;
     height: 100%;
     // filter: blur(1.9px)
     // object-fit: cover;
     background-image: linear-gradient(120deg, #eaee44, #33d0ff);
-    opacity: 0.3;
+    opacity: 0.7;
+    mix-blend-mode: hue;
+    mix-blend-mode: color;
+    mix-blend-mode: hard-light;
+    transform: skew(-15deg) translateX(-50%);
   }
 }
 
+
+
+.site-navbar {
+  transition: top 0.7s; // Transition effect when sliding down (and up)
+  // top: 0;
+  // position: fixed;
+}
