Added overlay to hero text area

--- a/static/scss/_custom_variables.scss
+++ b/static/scss/_custom_variables.scss
@@ -223,7 +223,8 @@ $grid-gutter-width: 30px !default;
 $line-height-lg: 1.5 !default;
 $line-height-sm: 1.5 !default;
 
-$border-width: 1px !default;
+// $border-width: 1px !default;
+$border-width: 1.45px !default;
 $border-color: $gray-300 !default;
 
 $border-radius: .25rem !default;
@@ -374,8 +375,8 @@ $display3-weight: 300 !default;
 $display4-weight: 300 !default;
 $display-line-height: $headings-line-height !default;
 
-$lead-font-size: $font-size-base * 1.25 !default;
-$lead-font-weight: 300 !default;
+$lead-font-size: $font-size-base * 1.5 !default;
+$lead-font-weight: 500 !default;
 
 $small-font-size: 80% !default;
 
