--- a/static/scss/_custom_styles.scss
+++ b/static/scss/_custom_styles.scss
@@ -22,13 +22,9 @@
 }
 
 .hero {
-  // background-image: url("/img/aAkf3mD.jpg");
-  // background-position: center;
-  // background-repeat: no-repeat;
-  // background-size: cover;
-  // // height: 50%;
   position: relative;
   overflow: hidden;
+
   // object-fit: cover;
   &::before {
     content: "";
@@ -37,22 +33,75 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
+    filter: blur(0.5px);
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    // bottom: 0%;
+    // right: 0%;
+    // transform: translate(-50%,-50%);
+    width: 100%;
+    height: 100%;
+    // mix-blend-mode: hue;
+    // mix-blend-mode: color;
+    // mix-blend-mode: hard-light;
+    // filter: grayscale(0%);
+    // object-fit: cover;
+    // object-position: center;
+    // opacity: 0.2;
+    // background-image: linear-gradient(120deg, #eaee44, #33d0ff)
+  }
+
+  &::after {
+    content: "";
+    z-index: -1;
+    // background-image: url("/img/aAkf3mD.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     // height: 50%;
     position: absolute;
     top: 50%;
     left: 50%;
-    bottom: 0%;
-    right: 0%;
-    transform: translate(-50%,-50%);
-    width: 100%;
-    height: 100%;
-    filter: blur(1.9px);
-    // filter: grayscale(0%);
+    width: 80%;
+    height: 80%;
+    // filter: blur(0.79px);
     // object-fit: cover;
-    // opacity: 0.2;
-    // background-image: linear-gradient(120deg, #eaee44, #33d0ff)
+    // background-image: linear-gradient(120deg, #33d0ff, #eaee44);
+    background-image: linear-gradient(black, black);
+    opacity: 0.5;
+    border-radius: 20px;
+    // mix-blend-mode: hue;
+    // mix-blend-mode: color;
+    // mix-blend-mode: hard-light;
+    // mix-blend-mode: saturation;
+    transform: skew(-0deg) translate(-50%, -50%);
   }
-  
+
+  //Hero Large Heading Text
+  &-hashtag {
+    display: inline-block;
+
+    &-alt0 {
+      color: lightyellow;
+      // word-break: break-all;
+    }
+
+    &-alt1 {
+      color: yellow;
+      // background-color: yellow;
+    }
+  }
+}
+
+html {
+  scroll-behavior: smooth !important;
+}
+
+.site-navbar {
+  transition: top 0.5s;
+
   &::after {
     content: "";
     z-index: -1;
@@ -63,24 +112,27 @@
     // height: 50%;
     position: absolute;
     top: 0%;
-    left: 50%;
-    width: 75%;
+    left: 0%;
+    width: 100%;
     height: 100%;
-    // filter: blur(1.9px)
+    filter: blur(20px);
     // object-fit: cover;
-    background-image: linear-gradient(120deg, #eaee44, #33d0ff);
-    opacity: 0.7;
-    mix-blend-mode: hue;
-    mix-blend-mode: color;
-    mix-blend-mode: hard-light;
-    transform: skew(-15deg) translateX(-50%);
+    // background-image: linear-gradient(-120deg, #33d0ff, #eaee44);
+    background: linear-gradient(to right, #000000 50%, #000000 50%);
+    opacity: 0.2;
+    // mix-blend-mode: hue;
+    // mix-blend-mode: color;
+    // mix-blend-mode: hard-light;
+    // mix-blend-mode: saturation;
+    // transform: skew(-0deg) translate(-50%, -50%);
   }
-}
 
+  &-hr,
+  &-cta-btn {
+    // border: 1px dotted;
+  }
 
-
-.site-navbar {
-  transition: top 0.7s; // Transition effect when sliding down (and up)
-  // top: 0;
-  // position: fixed;
+  &-container {
+    //
+  }
 }
