--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 
 <body>
   <div class="site-wrapper">
-    <header id="zz" class="site-navbar navbar navbar-expand-md fixed-top navbar-light bg-light px-md-6">
+    <header class="site-navbar navbar navbar-expand-md fixed-top navbar-lightr navbar-dark px-md-6">
       <a href="{{ url_for('index') }}" class="navbar-brand"><span class=" font-weight-bold">Micro Starter</span></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-site-nav">
         <span class="navbar-toggler-icon"></span>
@@ -17,10 +17,10 @@
           {% from '_macros.html' import set_active_page %}
           {{
               set_active_page("Home", "index")
-            }}
+            }} <span class="text-light" style='line-height: 1.9;'>.</span>
           {{
               set_active_page("About", "about")
-            }}
+            }}<span class="text-light" style='line-height: 1.9;'>.</span>
           {{
               set_active_page("Contact", "contact")
             }}
@@ -31,7 +31,7 @@
     <main class="page-main">
       {% block page_main %}{% endblock %}
     </main>
-    <footer class="site-footer text-light bg-dark">&copy;</footer>
+    <footer id="site-footer" class="site-footer text-light bg-dark">&copy;</footer>
   </div>
   {% include '_scripts.html'%}
 </body>
