--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,11 @@
 {% block page_main %}
 
 <header class="hero jumbotron jumbotron-fluid text-center text-light">
-    <div class="container-fluid mx-auto w-65">
+    <div class="hero-container container-fluid mx-auto w-75">
 
-        <h1 class="display-1 pt-5">Micro Starter</h1>
+        <h1 class="hero-heading display-1 pt-5"><span class="hero-hashtag hero-hashtag-alt0">#</span><span
+                class="hero-hashtag hero-hashtag-alt1">Learn</span><span
+                class="hero-hashtag hero-hashtag-alt0">Coding</span></h1>
         <!-- <hr class="bg-light" /> -->
         <p class="lead mt-5 mb-3">
             Lorem ipsum, dolor sit amet consectetur adipisicing.
@@ -17,9 +19,9 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam cum repellendus officiis, deleniti itaque
             voluptatem tempore nulla amet?
         </p>
-        <hr class="bg-light w-50 mt-0 mb-4">
+        <hr class="hero-hr bg-light w-50 mt-0 mb-4">
         <!-- <a class="btn btn-outline-secondary btn-lg m-1" href="#" role="button">Learn more</a> -->
-        <a class="btn btn-outline-light btn-lg rounded-0" href="#" role="button">Learn more</a>
+        <a class="hero-cta-btn btn btn-light btn-lg hero-hashtag-cta" href="#site-footer" role="button">Start Here</a>
     </div>
 </header>
 <h1 class="display-1">Micro Starter</h1> <br>
