Made changes to about.html template.

--- a/static/scss/_custom_styles.scss
+++ b/static/scss/_custom_styles.scss
@@ -127,10 +127,10 @@ html {
     // transform: skew(-0deg) translate(-50%, -50%);
   }
 
-  &-hr,
-  &-cta-btn {
-    // border: 1px dotted;
-  }
+  // &-hr,
+  // &-cta-btn {
+  //   // border: 1px dotted;
+  // }
 
   // &-container {
   //   //
