--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 
 {% block page_main %}
-<div class="display-4 font-weight-bold text-primary pt-6" id="time-area"></div>
+<div class="display-4 font-weight-bold text-primary pt-6" id="time-area">Please wait!!!</div>
 {% endblock %}
