--- a/templates/about.html
+++ b/templates/about.html
@@ -2,4 +2,5 @@
 
 {% block page_main %}
 <div class="display-4 font-weight-bold text-primary pt-6" id="time-area">Please wait!!!</div>
+Nothing to display.
 {% endblock %}
