Modified hero margins.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,13 @@
 {% block page_main %}
 
 <header class="hero jumbotron jumbotron-fluid text-center text-light">
-    <div class="hero-container container-fluid mx-auto w-75">
+    <div class="hero-container py-6 container-fluid mx-auto w-75">
 
-        <h1 class="hero-heading display-1 pt-5"><span class="hero-hashtag hero-hashtag-alt0">#</span><span
+        <h1 class="hero-heading display-1 mx-auto mb-4"><span class="hero-hashtag hero-hashtag-alt0">#</span><span
                 class="hero-hashtag hero-hashtag-alt1">Learn</span><span
                 class="hero-hashtag hero-hashtag-alt0">Coding</span></h1>
         <!-- <hr class="bg-light" /> -->
-        <p class="lead mt-5 mb-3">
+        <p class="lead mx-auto mb-3">
             Lorem ipsum, dolor sit amet consectetur adipisicing.
         </p>
         <!-- <hr class="" /> -->
@@ -19,12 +19,15 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam cum repellendus officiis, deleniti itaque
             voluptatem tempore nulla amet?
         </p>
-        <hr class="hero-hr bg-light w-50 mt-0 mb-4">
+        <hr class="hero-hr bg-light w-50 mb-5">
         <!-- <a class="btn btn-outline-secondary btn-lg m-1" href="#" role="button">Learn more</a> -->
-        <a class="hero-cta-btn btn btn-light btn-lg hero-hashtag-cta" href="#site-footer" role="button">Start Here</a>
+        <a class="hero-cta-btn btn btn-light btn-lg hero-hashtag-cta rounded-0" href="#site-footer" role="button">Start
+            Here</a>
     </div>
 </header>
 <h1 class="display-1">Micro Starter</h1> <br>
+<div id="on-test" style="top: 0; position: sticky; height: 200px; width: 400px; background-color: red; opacity: 0.6">
+</div>
 <h2 class="display-2">Micro Starter</h2> <br>
 <h3 class="display-3">Micro Starter</h3> <br>
 <h4 class="display-4">Micro Starter</h4> <br>
