--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -6921,7 +6921,7 @@ a.text-dark:hover, a.text-dark:focus {
 .site-wrapper {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: minmax(auto, auto) auto 10vh;
+  grid-template-rows: minmax(auto, auto) minmax(auto, 2000px) 200px;
   grid-template-areas: "nav  nav  nav  nav  nav  nav  nav  nav  nav  nav  nav  nav" "main main main main main main main main main main main main" "foot foot foot foot foot foot foot foot foot foot foot foot"; }
 
 .site-navbar {
@@ -6939,6 +6939,7 @@ a.text-dark:hover, a.text-dark:focus {
   .hero::before {
     content: "";
     z-index: -1;
+    background-image: linear-gradient(#717464, #717464);
     background-image: url("/img/aAkf3mD.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -6950,21 +6951,23 @@ a.text-dark:hover, a.text-dark:focus {
     left: 0%;
     width: 100%;
     height: 100%; }
-  .hero::after {
-    content: "";
-    z-index: -1;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 80%;
-    height: 80%;
-    background-image: linear-gradient(black, black);
-    opacity: 0.5;
-    border-radius: 20px;
-    transform: skew(0deg) translate(-50%, -50%); }
+  .hero-container {
+    position: relative; }
+    .hero-container::after {
+      content: "";
+      z-index: -1;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      margin: auto;
+      position: absolute;
+      top: 0%;
+      left: 0%;
+      width: 100%;
+      height: 100%;
+      background-image: linear-gradient(black, black);
+      opacity: 0.5;
+      border-radius: 20px; }
   .hero-hashtag {
     display: inline-block; }
     .hero-hashtag-alt0 {
@@ -6989,5 +6992,5 @@ html {
     width: 100%;
     height: 100%;
     filter: blur(20px);
-    background: linear-gradient(to right, #000000 50%, #000000 50%);
+    background: linear-gradient(to right, #373c32 50%, #373c32 50%);
     opacity: 0.2; }
