--- a/static/scss/_custom_styles.scss
+++ b/static/scss/_custom_styles.scss
@@ -2,7 +2,7 @@
   // background-color: burlywood;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: minmax(auto, auto) auto 10vh;
+  grid-template-rows: minmax(auto, auto) minmax(auto, 2000px) 200px;
   grid-template-areas:
     "nav  nav  nav  nav  nav  nav  nav  nav  nav  nav  nav  nav"
     "main main main main main main main main main main main main"
@@ -29,6 +29,7 @@
   &::before {
     content: "";
     z-index: -1;
+    background-image: linear-gradient(#717464, #717464);
     background-image: url("/img/aAkf3mD.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -53,30 +54,61 @@
     // background-image: linear-gradient(120deg, #eaee44, #33d0ff)
   }
 
-  &::after {
-    content: "";
-    z-index: -1;
-    // background-image: url("/img/aAkf3mD.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    // height: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 80%;
-    height: 80%;
-    // filter: blur(0.79px);
-    // object-fit: cover;
-    // background-image: linear-gradient(120deg, #33d0ff, #eaee44);
-    background-image: linear-gradient(black, black);
-    opacity: 0.5;
-    border-radius: 20px;
-    // mix-blend-mode: hue;
-    // mix-blend-mode: color;
-    // mix-blend-mode: hard-light;
-    // mix-blend-mode: saturation;
-    transform: skew(-0deg) translate(-50%, -50%);
+  // &::after {
+  //   content: "";
+  //   z-index: -1;
+  //   // background-image: url("/img/aAkf3mD.jpg");
+  //   background-position: center;
+  //   background-repeat: no-repeat;
+  //   background-size: cover;
+  //   // height: 50%;
+  //   position: absolute;
+  //   top: 50%;
+  //   left: 50%;
+  //   width: 80%;
+  //   height: 80%;
+  //   // filter: blur(0.79px);
+  //   // object-fit: cover;
+  //   // background-image: linear-gradient(120deg, #33d0ff, #eaee44);
+  //   background-image: linear-gradient(black, black);
+  //   opacity: 0.5;
+  //   border-radius: 20px;
+  //   // mix-blend-mode: hue;
+  //   // mix-blend-mode: color;
+  //   // mix-blend-mode: hard-light;
+  //   // mix-blend-mode: saturation;
+  //   transform: skew(-0deg) translate(-50%, -50%);
+  // }
+
+  &-container {
+    position: relative;
+    &::after {
+      content: "";
+      z-index: -1;
+      // background-image: url("/img/aAkf3mD.jpg");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      margin: auto;
+      position: absolute;
+      top: 0%;
+      left: 0%;
+      // bottom: 0%;
+      // right: 0%;
+      width: 100%;
+      height: 100%;
+      // filter: blur(0.79px);
+      // object-fit: cover;
+      // background-image: linear-gradient(120deg, #33d0ff, #eaee44);
+      background-image: linear-gradient(black, black);
+      opacity: 0.5;
+      border-radius: 20px;
+      // mix-blend-mode: hue;
+      // mix-blend-mode: color;
+      // mix-blend-mode: hard-light;
+      // mix-blend-mode: saturation;
+      // transform: skew(-0deg) translate(-50%, -50%);
+    }
   }
 
   //Hero Large Heading Text
@@ -118,7 +150,7 @@ html {
     filter: blur(20px);
     // object-fit: cover;
     // background-image: linear-gradient(-120deg, #33d0ff, #eaee44);
-    background: linear-gradient(to right, #000000 50%, #000000 50%);
+    background: linear-gradient(to right, #373c32 50%, #373c32 50%);
     opacity: 0.2;
     // mix-blend-mode: hue;
     // mix-blend-mode: color;
