--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,8 @@
         </p>
         <hr class="hero-hr bg-light w-50 mb-5">
         <!-- <a class="btn btn-outline-secondary btn-lg m-1" href="#" role="button">Learn more</a> -->
-        <a class="hero-cta-btn btn btn-light btn-lg hero-hashtag-cta rounded-0" href="#site-footer" role="button">Start
+        <a class="hero-cta-btn btn btn-light btn-lg hero-hashtag-cta rounded-0" href="#site-footer"
+            role="button">Start
             Here</a>
     </div>
 </header>
