--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -4,7 +4,6 @@
  * Copyright 2011-2019 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-@import url("../font/Comfortaa/Comfortaa-VariableFont:wght.ttf");
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -6918,6 +6917,10 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6; } }
 
+@font-face {
+  font-family: "Comfortaa";
+  src: url("/font/Comfortaa/Comfortaa-VariableFont:wght.ttf"); }
+
 .site-wrapper {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -6934,8 +6937,7 @@ a.text-dark:hover, a.text-dark:focus {
   grid-area: foot; }
 
 .hero {
-  position: relative;
-  overflow: hidden; }
+  position: relative; }
   .hero::before {
     content: "";
     z-index: -1;
@@ -6979,9 +6981,11 @@ html {
   scroll-behavior: smooth !important; }
 
 .site-navbar {
-  transition: top 0.5s; }
+  transition: background-color 0.2s ease-out; }
+  .site-navbar--shadow {
+    border-radius: 0px 0px 2px 2px;
+    box-shadow: 0 1px 10px #999; }
   .site-navbar::after {
-    content: "";
     z-index: -1;
     background-position: center;
     background-repeat: no-repeat;
@@ -6991,6 +6995,21 @@ html {
     left: 0%;
     width: 100%;
     height: 100%;
-    filter: blur(20px);
     background: linear-gradient(to right, #373c32 50%, #373c32 50%);
     opacity: 0.2; }
+
+#parent {
+  background-color: lightblue;
+  padding: 60.2344px 0 0;
+  margin: 100px 0 0; }
+
+#child {
+  background-color: lightpink;
+  margin: 0;
+  padding: 0; }
+
+.hero_sentinel {
+  position: absolute;
+  background-color: orange;
+  top: 0;
+  visibility: hidden; }
