--- a/templates/_head.html
+++ b/templates/_head.html
@@ -7,7 +7,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon/favicon-32x32.png') }}" />
 <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='favicon/favicon-16x16.png') }}" />
 <link rel="manifest" href="{{ url_for('static', filename='favicon/site.webmanifest') }}" />
-<link rel="stylesheet" href="{{ url_for('static',filename='css/custom.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static',filename='css/custom.css') }}" type="text/css" />
 <title>
   {{ set_title(title, fallback='No title set!') }}
 </title>
