--- a/templates/about.html
+++ b/templates/about.html
@@ -1,34 +1,8 @@
 {% extends 'base.html' %}
 
 {% block page_main %}
-<div class="display-4 font-weight-bold text-primary pt-6" id="time-area">Please wait!!!</div>
-<div id="container">
-    <div data-lorem="p">
-        <div class="sticky">
-            <h2 id=""></h2>
-        </div>
-        <div>Pulvinar mattis nunc sed blandit libero. Est lorem ipsum dolor sit. Non pulvinar neque laoreet
-            suspendisse interdum consectetur libero id faucibus. Condimentum mattis pellentesque id nibh tortor.
-            Porttitor leo a diam sollicitudin tempor. Eget magna fermentum iaculis eu non diam phasellus. Consequat
-            interdum varius sit amet. Porttitor leo a diam sollicitudin tempor id eu nisl. Diam maecenas sed enim ut
-            sem viverra aliquet. A iaculis at erat pellentesque adipiscing commodo elit. Elementum facilisis leo vel
-            fringilla est ullamcorper eget nulla. Nam aliquam sem et tortor consequat id. Egestas egestas fringilla
-            phasellus faucibus scelerisque eleifend donec. Nunc congue nisi vitae suscipit tellus. Ullamcorper a
-            lacus vestibulum sed arcu. Posuere ac ut consequat semper viverra. Tortor dignissim convallis aenean et
-            tortor at risus viverra adipiscing. Viverra aliquet eget sit amet tellus cras. Sapien faucibus et
-            molestie ac feugiat sed lectus vestibulum mattis. Imperdiet proin fermentum leo vel. Cras fermentum odio
-            eu feugiat pretium nibh. Turpis in eu mi bibendum neque egestas congue quisque egestas. Mattis
-            pellentesque id nibh tortor id aliquet. Nunc non blandit massa enim nec dui nunc mattis enim. Augue
-            neque gravida in fermentum et sollicitudin. Non blandit massa enim nec dui nunc mattis. Pharetra
-            pharetra massa massa ultricies mi quis hendrerit. Amet volutpat consequat mauris nunc congue nisi vitae
-            suscipit. Lacinia quis vel eros donec ac odio tempor orci dapibus. Suspendisse sed nisi lacus sed
-            viverra tellus. Dui faucibus in ornare quam viverra orci. Sit amet volutpat consequat mauris nunc.
-            Sagittis aliquam malesuada bibendum arcu vitae elementum. Aenean pharetra magna ac placerat vestibulum
-            lectus mauris ultrices eros. Ipsum dolor sit amet consectetur. Maecenas sed enim ut sem viverra aliquet
-            eget. Dui accumsan sit amet nulla facilisi morbi tempus iaculis. Proin libero nunc consequat interdum
-            varius sit amet mattis vulputate. Mauris rhoncus aenean vel elit scelerisque mauris. Convallis tellus id
-            interdum velit laoreet. Rhoncus est pellentesque elit ullamcorper dignissim cras. Vel pharetra vel
-            turpis nunc eget lorem dolor sed.</div>
-    </div>
+<div id="parent">
+    <h1 id="child">A big fat hen...</h1>
 </div>
+<div style="height: 30vh; background-color: yellow;"></div>
 {% endblock %}
