--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -6925,7 +6925,7 @@ a.text-dark:hover, a.text-dark:focus {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: minmax(auto, auto) minmax(auto, 2000px) 200px;
-  grid-template-areas: "nav  nav  nav  nav  nav  nav  nav  nav  nav  nav  nav  nav" "main main main main main main main main main main main main" "foot foot foot foot foot foot foot foot foot foot foot foot"; }
+  grid-template-areas: "main main main main main main main main main main main main" "foot foot foot foot foot foot foot foot foot foot foot foot"; }
 
 .site-navbar {
   grid-area: nav; }
@@ -6947,7 +6947,6 @@ a.text-dark:hover, a.text-dark:focus {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    filter: blur(0.5px);
     position: absolute;
     top: 0%;
     left: 0%;
@@ -6978,25 +6977,13 @@ a.text-dark:hover, a.text-dark:focus {
       color: yellow; }
 
 html {
-  scroll-behavior: smooth !important; }
+  scroll-behavior: smooth; }
 
 .site-navbar {
-  transition: background-color 0.2s ease-out; }
+  will-change: background-color, color; }
   .site-navbar--shadow {
-    border-radius: 0px 0px 2px 2px;
+    border-radius: 0 0 2px 2px;
     box-shadow: 0 1px 10px #999; }
-  .site-navbar::after {
-    z-index: -1;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to right, #373c32 50%, #373c32 50%);
-    opacity: 0.2; }
 
 #parent {
   background-color: lightblue;
@@ -7010,6 +6997,5 @@ html {
 
 .hero_sentinel {
   position: absolute;
-  background-color: orange;
   top: 0;
   visibility: hidden; }
