--- a/static/scss/_custom_styles.scss
+++ b/static/scss/_custom_styles.scss
@@ -4,12 +4,11 @@
 }
 
 .site-wrapper {
-  // background-color: burlywood;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: minmax(auto, auto) minmax(auto, 2000px) 200px;
   grid-template-areas:
-    "nav  nav  nav  nav  nav  nav  nav  nav  nav  nav  nav  nav"
+  // "nav  nav  nav  nav  nav  nav  nav  nav  nav  nav  nav  nav"
     "main main main main main main main main main main main main"
     "foot foot foot foot foot foot foot foot foot foot foot foot";
 }
@@ -28,9 +27,7 @@
 
 .hero {
   position: relative;
-  // overflow: hidden;
 
-  // object-fit: cover;
   &::before {
     content: "";
     z-index: -1;
@@ -40,57 +37,19 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    filter: blur(0.5px);
     position: absolute;
     top: 0%;
     left: 0%;
-    // bottom: 0%;
-    // right: 0%;
-    // transform: translate(-50%,-50%);
     width: 100%;
     height: 100%;
-    // mix-blend-mode: hue;
-    // mix-blend-mode: color;
-    // mix-blend-mode: hard-light;
-    // filter: grayscale(0%);
-    // object-fit: cover;
-    // object-position: center;
-    // opacity: 0.2;
-    // background-image: linear-gradient(120deg, #eaee44, #33d0ff)
+    // filter: blur(0.5px);
   }
-
-  // &::after {
-  //   content: "";
-  //   z-index: -1;
-  //   // background-image: url("/img/aAkf3mD.jpg");
-  //   background-position: center;
-  //   background-repeat: no-repeat;
-  //   background-size: cover;
-  //   // height: 50%;
-  //   position: absolute;
-  //   top: 50%;
-  //   left: 50%;
-  //   width: 80%;
-  //   height: 80%;
-  //   // filter: blur(0.79px);
-  //   // object-fit: cover;
-  //   // background-image: linear-gradient(120deg, #33d0ff, #eaee44);
-  //   background-image: linear-gradient(black, black);
-  //   opacity: 0.5;
-  //   border-radius: 20px;
-  //   // mix-blend-mode: hue;
-  //   // mix-blend-mode: color;
-  //   // mix-blend-mode: hard-light;
-  //   // mix-blend-mode: saturation;
-  //   transform: skew(-0deg) translate(-50%, -50%);
-  // }
 
   &-container {
     position: relative;
     &::after {
       content: "";
       z-index: -1;
-      // background-image: url("/img/aAkf3mD.jpg");
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
@@ -98,21 +57,11 @@
       position: absolute;
       top: 0%;
       left: 0%;
-      // bottom: 0%;
-      // right: 0%;
       width: 100%;
       height: 100%;
-      // filter: blur(0.79px);
-      // object-fit: cover;
-      // background-image: linear-gradient(120deg, #33d0ff, #eaee44);
       background-image: linear-gradient(black, black);
       opacity: 0.5;
       border-radius: 20px;
-      // mix-blend-mode: hue;
-      // mix-blend-mode: color;
-      // mix-blend-mode: hard-light;
-      // mix-blend-mode: saturation;
-      // transform: skew(-0deg) translate(-50%, -50%);
     }
   }
 
@@ -133,48 +82,15 @@
 }
 
 html {
-  scroll-behavior: smooth !important;
+  scroll-behavior: smooth;
 }
 
 .site-navbar {
-  transition: background-color 0.2s ease-out;
+  will-change: background-color, color;
   &--shadow {
-    border-radius: 0px 0px 2px 2px;
+    border-radius: 0 0 2px 2px;
     box-shadow: 0 1px 10px #999;
   }
-  &::after {
-    // content: "";
-    z-index: -1;
-    // background-image: url("/img/aAkf3mD.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    // height: 50%;
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    width: 100%;
-    height: 100%;
-    // filter: blur(20px);
-    // object-fit: cover;
-    // background-image: linear-gradient(-120deg, #33d0ff, #eaee44);
-    background: linear-gradient(to right, #373c32 50%, #373c32 50%);
-    opacity: 0.2;
-    // mix-blend-mode: hue;
-    // mix-blend-mode: color;
-    // mix-blend-mode: hard-light;
-    // mix-blend-mode: saturation;
-    // transform: skew(-0deg) translate(-50%, -50%);
-  }
-
-  // &-hr,
-  // &-cta-btn {
-  //   // border: 1px dotted;
-  // }
-
-  // &-container {
-  //   //
-  // }
 }
 
 #parent {
@@ -191,10 +107,6 @@ html {
 
 .hero_sentinel {
   position: absolute;
-  background-color: orange;
-  // height: 0;
   top: 0;
-  // left: 0;
-  // right: 0;
   visibility: hidden;
 }
