--- a/templates/_scripts.html
+++ b/templates/_scripts.html
@@ -1,14 +1,10 @@
-<script src="{{ url_for('static', filename='vendor/jquery/jquery-3.3.1.slim.min.js') }}"></script>
+<!-- <script src="{{ url_for('static', filename='vendor/jquery/jquery-3.3.1.slim.min.js') }}"></script>
 <script src="{{ url_for('static', filename='vendor/popper/popper.min.js') }}"></script>
 <script src="{{ url_for('static', filename='vendor/bootstrap/bootstrap.min.js') }}"></script>
 <script src="{{ url_for('static', filename='vendor/moment/moment-with-locales.js') }}"></script>
 <script src="{{ url_for('static', filename='vendor/moment/moment-timezone-with-data.js') }}"></script>
-<script type="module" src="{{ url_for('static', filename='js/custom.js') }}"></script>
+<script type="module" src="{{ url_for('static', filename='js/custom.js') }}"></script> -->
+<script type="module" src="{{ url_for('static', filename='js/bundle.js') }}"></script>
 <script>
-    $(document).ready(function () {
-        $('[data-toggle="tooltip"]').tooltip();
-    });
-</script>
-<script>
-    moment().format();
+    <!-- moment().format(); -->
 </script>
